--- a/Website/index.html
+++ b/Website/index.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
+<div id="background">
     <header>
         <div class="header-container">
             <div class="head">
@@ -43,8 +47,8 @@
                     </div>
 
                     <div class="left-paragraph-box">
-                        <p>New free template by <a href="">uicookies.com</a>. For more
-                            <br> templates visit the <a href="">site</a>. Lorem ipsum dolor sit amet,<br>consectetur
+                        <p>New free template by <a href="bakemeawish.com">bakemeawish.com</a>. For more
+                            <br> templates visit the <a href="bakemeawish.com">site</a>. Lorem ipsum dolor sit amet,<br>consectetur
                             adipising elit.
                         </p>
                     </div>
@@ -68,12 +72,12 @@
                             <input type="text" placeholder="Full name">
                             <input type="email" placeholder="Email">
                             <input type="email" placeholder="Email confirmation">
-                            <select id="cars" name="cars">
+                            <select id="landing" name="land">
                                 <option value="" default hidden>Type</option>
-                                <option value="volvo">type 1</option>
-                                <option value="saab">type 2</option>
-                                <option value="fiat">type 3</option>
-                                <option value="audi">type 4</option>
+                                <option value="lorem">Lorem</option>
+                                <option value="lorem">Lorem</option>
+                                <option value="lorem">lorem</option>
+                                <option value="lorem">lorem</option>
                             </select>
                             <input type="submit" value="Register">
 
@@ -87,6 +91,8 @@
         </section>
 
     </main>
+</div>
+
 </body>
 
 </html>
